--- a/templates/views/about.hbs
+++ b/templates/views/about.hbs
@@ -7,7 +7,7 @@
     <body>
         <div class="main-content">
             {{>header}}
-
+            <p>This app uses weather stack and position stack APIs to fetch weather data.</p>
             <img class="portrait" src="/img/pic.png" alt="No image" />
         </div>
 
